ruoyi-web/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ry-web
  namespace: ruoyi-basic
spec:
  selector:
    app: ry-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
